# MiniEngine

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
docs/: 场景JSON结构.ts
src/: main.cpp
src/engine/: camera.hpp  model.hpp  render.hpp  shader.hpp
src/engine/accelerator/: AABB.hpp
src/engine/data/: camera.hpp  color.hpp  ray.hpp  scene.hpp  transform.hpp  xyz.hpp
src/engine/implement/material/: default.hpp  diffuse.hpp  mirror.hpp
src/engine/implement/objects/: aggregate.hpp  cube.hpp  rectangle.hpp  sphere.hpp
src/engine/implement/render/: rs_render.hpp  rt_render.hpp
src/engine/implement/shader/: simple.hpp
src/engine/implement/texture/: mapping.hpp  solid.hpp
src/engine/interface/: material.hpp  object.hpp  render.hpp  shader.hpp  texture.hpp
src/engine/material/: default.hpp  diffuse.hpp  mirror.hpp
src/engine/math/: mat.hpp  utils.hpp  vec.hpp
src/engine/objects/: rectangle.hpp  sphere.hpp
src/engine/render/: rs_render.hpp  rt_render.hpp
src/engine/store/: bmp.hpp  context.hpp  image.hpp  model.hpp
src/engine/tools/: average.hpp  json.hpp  process.hpp
src/math/: mat.hpp  utils.hpp  vec.hpp
src/view/: color.hpp  gui.hpp  image.hpp
